crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__binding_a_bytes_property_read_to_a_local_retains_it.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bytes) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bytes
    ; stmt s0 @10:5-10:31
    retain v1
    v2 = new Foo via Foo::constructor(v1) ! bb1  ; object
    ; stmt s1 @11:5-11:25
    v3 = field.get v2, Foo::data  ; bytes
    retain v3
    release v2
    release v3
    release v1
    release v0
    return
  bb1:
    release v1
    release v0
    propagate "m() at t.nvs:10"
}
