crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__concatenating_two_string_literals_needs_no_retain_of_either_operand.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:22
    v1 = const.str "a"  ; string
    v2 = const.str "b"  ; string
    v3 = concat v1, v2  ; string
    release v1
    release v2
    release v0
    return v3
}
