crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__continue_adds_another_incoming_edge_to_the_header_phi.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:16
    v2 = const.int 0  ; int
    ; stmt s1 @5:5-5:18
    v3 = const.int 0  ; int
    ; stmt s2 @6:5-12:6
    jump bb1
  bb1:
    v4 = phi [bb0: v2, bb5: v8, bb6: v8]  ; int
    v5 = phi [bb0: v3, bb5: v11, bb6: v5]  ; int
    v6 = lt v4, v1  ; bool
    branch v6 -> bb2 (e0), bb3 (e1)
  bb2:
    ; stmt s3 @6:21-12:6
    ; stmt s4 @7:7-7:19
    v7 = const.int 1  ; int
    v8 = add v4, v7 ! bb4  ; int
    ; stmt s5 @8:7-10:8
    v9 = const.int 3  ; int
    v10 = eq v8, v9  ; bool
    branch v10 -> bb6 (e2), bb5 (e3)
  bb3:
    ; stmt s9 @13:5-13:17
    release v0
    return v5
  bb4:
    release v0
    propagate "m() at t.nvs:7"
  bb5:
    ; stmt s8 @11:7-11:24
    v11 = add v5, v8 ! bb7  ; int
    safepoint
    jump bb1
  bb6:
    ; stmt s6 @8:20-10:8
    ; stmt s7 @9:9-9:18
    safepoint
    jump bb1
  bb7:
    release v0
    propagate "m() at t.nvs:11"
}
